# rabe

./: .fprettify  .git-blame-ignore-revs  .gitignore  .gitmodules  .pre-commit-config.yaml  BACKLOG  CITATION.cff  CLAUDE.md  CMakeLists.txt  DESIGN.md  Makefile  README.md  flake.nix  fpm.toml  index.html  pyproject.toml  requirements.txt  sources.cmake  test_ci_workflow.py
python/: CMakeLists.txt  Makefile  anti_sigma.py  calc_shaing_callen_single_harmonic.py  check_symbols.py  check_theta_orientation.py  class_names.py  compare_modes.py  compare_redl_neo2.py  compare_redl_neo2_axisymmetric.py  compare_theta_vmec_bc_landreman.py  compare_to_shaing_callen.py  compare_vmec_bc_w7x.py  compute_bootcurrent_neo2.py  compute_lambda_bB_analytical.py  compute_surface_area.py  estimate_bootcurrent_neo2.py  example.py  example_fourier.py  joint_modules.py  kind_map.py  make_bc_from_booz_xform.py  make_quasi_symmetric_bc.py  plot_quasi_helical_bc.py  pyproject.toml  rabe_init.py  run_booz_xform.py  run_redl.py  run_vmec2boozer.py
python/ad/: CMakeLists.txt  ad_driver.f90
python/test/: test_boozer_modes.py  test_fourier_series.py
src/: CMakeLists.txt  coefficients.f90  constants.f90  deviation.f90  field_base.f90  fieldline.f90  fieldline_integrals.f90  fieldline_integrands.f90  fieldline_labels.f90  find_extrema.f90  fit_functions.f90  fourier.f90  git_version.f90.in  integrands.f90  integrate.f90  magnetic_field.f90  main.f90  make_fieldline.f90  misc.f90  neo_control.f90  neo_exchange.f90  neo_field.f90  neo_inter_interfaces.f90  neo_read_control_data.f90  neo_solve_system.f90  neo_sparse_mod.f90  neo_spline_cof.f90  neo_spline_data.f90  neo_spline_int.f90  neo_sub.f90  neo_support.f90  neo_units.f90  neo_work.f90  netcdf.f90  netcdf_output.f90  rabe.f90  read_file.f90  shaing_callen.f90  shaing_callen_integration.f90  shaing_callen_remainder.f90  (+4 more)
src/constants/: .__afs6CA3  CMakeLists.txt
src/error_handling/: CMakeLists.txt  error_handling.f90
src/field/: CMakeLists.txt  bc_field.f90  field_base.f90  fourier_field.f90  neo_field.f90
src/fieldline/: CMakeLists.txt  README.md  field_along_fieldline.f90  field_checks.f90  fieldline.f90  fieldline_integrals.f90  fieldline_integrands.f90  fieldline_labels.f90  make_fieldline.f90  surface_average.f90
src/logger/: CMakeLists.txt  logger.f90  logger_config.f90
src/neo/: CMakeLists.txt  neo_control.f90  neo_input.f90  neo_inter_interfaces.f90  neo_magfie.f90  neo_magnetic_field.f90  neo_nrtype.f90  neo_spline.f90  neo_spline_b00.f90  neo_spline_cof.f90  neo_spline_data.f90  neo_spline_int.f90  neo_spline_mod.f90  neo_spline_over_s.f90  neo_sub.f90  neo_test_function.f90  umf4_f77wrapper_ver_4_5.c
src/netcdf/: CMakeLists.txt  netcdf.f90
src/numerics/: CMakeLists.txt
src/offset/: CMakeLists.txt  ad_driver.f90  coefficients.f90  deviation.f90  fit_functions.f90  offset_factors.f90
src/precession/: CMakeLists.txt  bounce.f90  field_instance.f90  grid.f90  grid_instance.f90  odeint_allroutines.f  orbit.f90  params.f90  precession.f90  read_precession.f90  splines_instance.f90
src/shaing_callen/: CMakeLists.txt  shaing_callen.f90  shaing_callen_integration.f90  shaing_callen_remainder.f90  shaing_callen_wrappers.f90
src/utils/: CMakeLists.txt  constants.f90  diophantine.f90  find_extrema.f90  fourier.f90  integrate.f90  trace.f90  utils.f90
src/vmec/: CMakeLists.txt  bmod_spectral.f90  boozer_converter.F90  boozer_field.f90  boozmn_reader.f90  field_vmec.f90  magfie.f90  magfie_can_boozer.f90
test/: CMakeLists.txt  test_find_extrema.f90
test/golden/: .gitignore  CMakeLists.txt  compare_golden.py  plot_golden.m  plot_golden.py  verify_vmec_theta_relabel.py
test/helpers/: CMakeLists.txt  anti_sigma_field.f90  bc_file.f90  bc_writer.f90  distribution_function.f90  horner_fourier_field.f90  mock_field.f90  mock_field_3d.f90  mock_perturbed_field.f90  plot_quantities.f90  readers.f90  test_calc_eta_integrand_mod.f90  test_cumint_mod.f90  test_shaing_callen_mod.f90  test_shaing_callen_remainder.f90
test/integration/: CMakeLists.txt  compare_deviations.f90  compare_distribution_function_neo2.f90  plot_deviation_drevlak_qh.f90  plot_deviation_goodman_nautilus.f90  plot_deviation_goodman_squid.f90  plot_deviation_helical_anti_sigma.f90  plot_deviation_landreman_paul_helical.f90  plot_deviation_poloidal_anti_sigma.f90  plot_distribution_function.f90  plot_helical_anti_sigma_small_aspect.f90  test_I_integral_helical_anti_sigma.f90  test_against_neo2.f90  test_against_neo2_anti_sigma.f90  test_against_neo2_field.f90  test_anti_sigma_analytic.f90  test_calc_eta_integrand.f90  test_check_field_origin.f90  test_deviation_helical_anti_sigma.f90  test_fieldline.f90  test_fieldline_integral.f90  test_find_global_maximum.f90  test_find_turning_points.f90  test_fourier_transform_over_label.f90  test_integration_along_fieldline.f90  test_lambda_helical_anti_sigma.f90  test_make_flock_of_fieldlines.f90  test_neo_covariant_components.f90  test_neo_dr_dAtheta.f90  test_neo_nabla_s.f90  test_neo_sqrt_g11.f90  test_pert_anti_sigma_analytic.f90  test_plot.f90  test_plot_anti_sigma.f90  test_precession_analytic.f90  test_set_fieldline_labels.f90  test_shaing_callen_against_quasi_symmetric.f90  test_shaing_callen_remainder_scaling.f90  test_stellarator_symmetry_neo.f90
test/plot/: CMakeLists.txt  README.md  myplot_module.f90  plot_I_ref_compare.f90  plot_anti_sigma copy.f90  plot_anti_sigma.f90  plot_bounce_orbits.f90  plot_bounce_time_averages.f90  plot_deviation_helical_anti_sigma.f90  plot_deviation_poloidal_anti_sigma.f90  plot_fourier_field_accuracy.f90  plot_fourier_field_timing.f90  plot_helical_anti_sigma_small_aspect.f90  plot_integrate_radial_drift.f90  plot_local_drift.f90  plot_nabla_s_compare.f90  plot_precession_bounce_time_analytic.f90  plot_precession_orbits_theta_phi.f90
test/plot_lib/: CMakeLists.txt  myplot_module.f90
test/unit/: CMakeLists.txt  plot_fit_functions.f90  plot_misc.f90  test_bc_field_nabla_s.f90  test_bmod_spectral.f90  test_calc_periodic_dydx.f90  test_cumint.f90  test_cumintegrate_over_phi_grid.f90  (+21 more)
(+91 files in other folders)
