[build-system]
requires = ["scikit-build-core", "f90wrap>=0.3.0", "numpy"]
build-backend = "scikit_build_core.build"

[project]
name = "rabe"
authors = [{name = "Georg Grassler", email = "georg.grassler@tugraz.at"}]
description = "Analytical bootstrap current estimation for stellarators"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
dependencies = ["numpy", "f90wrap>=0.3.0"]
dynamic = ["version"]

[tool.scikit-build]
cmake.args = ["-DBUILD_PYTHON_BINDINGS=ON"]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"

[tool.setuptools_scm]
version_scheme = "python-simplified-semver"
local_scheme = "dirty-tag"
